# tsbot

./: .gitignore  Cargo.toml  README.md  config.example.toml
.github/workflows/: ci.yml  release.yml
crates/audio/: Cargo.toml
crates/audio/src/: encode.rs  frame.rs  lib.rs
crates/commands/: Cargo.toml
crates/commands/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/perms/: Cargo.toml
crates/perms/src/: lib.rs
crates/player/: Cargo.toml
crates/player/src/: lib.rs
crates/playlist/: Cargo.toml
crates/playlist/src/: lib.rs
crates/source/: Cargo.toml
crates/source/src/: lib.rs
crates/ts-connection/: Cargo.toml
crates/ts-connection/src/: lib.rs
crates/tsbot/: Cargo.toml
crates/tsbot/src/: config.rs  main.rs  opus_enc.rs
docs/superpowers/plans/: 2026-06-11-phase1.md  2026-06-11-phase2a.md  2026-06-11-phase2b.md  2026-06-11-phase3.md  2026-06-11-phase4.md  2026-06-11-ts3-musicbot-mvp.md  2026-06-11-workspace-refactor.md
docs/superpowers/specs/: 2026-06-11-business-logic-roadmap.md  2026-06-11-phase1-design.md  2026-06-11-phase2a-design.md  2026-06-11-phase2b-design.md  2026-06-11-phase3-design.md  2026-06-11-phase4-design.md  2026-06-11-ts3-musicbot-mvp-design.md  2026-06-11-workspace-refactor-design.md
src/: identity_store.rs  main.rs
