[package]
name = "tsbot"
version = "0.1.0"
edition = "2021"

[dependencies]
tsclientlib = "0.2"
tsproto-packets = "0.1"
audiopus = "0.3.0-rc.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "time", "signal", "sync"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"
