[workspace]
resolver = "2"
members = ["crates/config", "crates/audio", "crates/ts-connection", "crates/tsbot"]

[workspace.dependencies]
tsclientlib = "0.2"
tsproto-packets = "0.1"
audiopus = "0.2"
tokio = "1"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tempfile = "3"
