[package]
name = "tsbot-ts-connection"
version = "0.1.0"
edition = "2021"

[lib]
name = "ts_connection"

[dependencies]
tsclientlib = { workspace = true }
tsproto-packets = { workspace = true }
tokio = { workspace = true, features = ["time", "macros", "sync"] }
futures = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
