[package]
name = "tsbot"
version = "0.1.0"
edition = "2021"

[dependencies]
tsclientlib = { workspace = true }
tsproto-packets = { workspace = true }
tsbot-audio = { path = "../audio" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process", "io-util", "time", "signal", "sync"] }
futures = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
