[package]
name = "tsbot"
version = "0.1.0"
edition = "2021"

[dependencies]
tsbot-config = { path = "../config" }
tsbot-ts-connection = { path = "../ts-connection" }
tsbot-player = { path = "../player" }
tsbot-commands = { path = "../commands" }
tsbot-playlist = { path = "../playlist" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
